route page fixes(?) and more chat page fixes

--- a/route.html
+++ b/route.html
@@ -2,78 +2,80 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>BusDating</title>
-    <meta name="description" content="bus dating">
-    <meta name="author" content="dimuzone, semibran, zzzbnbzzz">
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
-    <link href="styles/bus-dating.css" rel="stylesheet" />
-    <link href="styles/route.css" rel="stylesheet" />
+	<meta charset="utf-8">
+	<title>BusDating</title>
+	<meta name="description" content="bus dating">
+	<meta name="author" content="dimuzone, semibran, zzzbnbzzz">
+	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
+	<link href="styles/bus-dating.css" rel="stylesheet" />
+	<link href="styles/route.css" rel="stylesheet" />
 
 
 </head>
 
 <body>
 
-    <header class="header -search">
-        <div class="headings">
-            <h1 class="title">Route 49W</h1>
-            <span class="subtitle"><span class="material-icons">import_export</span> Metrotown
-            <span class="east-icon material-icons">
-                east
-                </span> UBC
-            </span>
-        </div>
-        <a href="./station.html" class="back">
-            <span class="material-icons">keyboard_arrow_left</span> Search
-        </a>
-        <div class="search-bar">
-            <span class="search-icon material-icons">search</span>
-            <input class="search-input" type="text" placeholder="Search routes" name="search"><br><br>
-        </div>
-    </header>
+	<header class="header -search">
+		<div class="header-text">
+			<div class="headings">
+				<h1 class="title">Route 49W</h1>
+				<span class="subtitle"><span class="material-icons">import_export</span> Metrotown
+					<span class="east-icon material-icons">
+						east
+					</span> UBC
+				</span>
+			</div>
+			<a href="./station.html" class="back">
+				<span class="material-icons">keyboard_arrow_left</span> Search
+			</a>
+		</div>
+		<div class="search-bar">
+			<span class="search-icon material-icons">search</span>
+			<input class="search-input" type="text" placeholder="Search routes" name="search"><br><br>
+		</div>
+	</header>
 
-    <main class="page -home">
+	<main class="page -home">
 
-        <section class="stations-section">
+		<section class="stations-section">
 
-            <div class="station-wrap">
-                <div class="station">
+			<div class="station-wrap">
+				<div class="station">
 
-                    <p class="station-text">Metrotown Station</p>
+					<p class="station-text">Metrotown Station</p>
 
-                    <div class="route">
-                        <span class="stn-route-number">Route 49E</span> &middot
-                        <span>60195 &middot Bay 11</span>
-                    </div>
-                </div>
+					<div class="route">
+						<span class="stn-route-number">Route 49E</span> &middot
+						<span>60195 &middot Bay 11</span>
+					</div>
+				</div>
 
-                <div>
-                    <span class="station-icon material-icons">chevron_right</span>
-                </div>
-            </div>
+				<div>
+					<span class="station-icon material-icons">chevron_right</span>
+				</div>
+			</div>
 
-            <div class="station-wrap">
-                <div class="station">
+			<div class="station-wrap">
+				<div class="station">
 
-                    <p class="station-text">UBC Exchange</p>
+					<p class="station-text">UBC Exchange</p>
 
-                    <div class="route">
-                        <span class="stn-route-number">Route 49W</span> &middot
-                        <span>60358</span>
-                    </div>
+					<div class="route">
+						<span class="stn-route-number">Route 49W</span> &middot
+						<span>60358</span>
+					</div>
 
-                </div>
+				</div>
 
-                <div>
-                    <span class="station-icon material-icons">chevron_right</span>
-                </div>
-            </div>
+				<div>
+					<span class="station-icon material-icons">chevron_right</span>
+				</div>
+			</div>
 
-        </section>
+		</section>
 
 
-    </main>
+	</main>
 
 </body>
 
