--- a/login.html
+++ b/login.html
@@ -1,20 +1,18 @@
 <!doctype html>
-<html>
+<html lang="en" dir="ltr">
 
 <head>
-	<title>BusDating - Login</title>
 	<meta charset="utf-8">
+	<title>BusDating - Login</title>
 	<meta name="description" content="bus dating">
 	<meta name="author" content="dimuzone, semibran, zzzbnbzzz">
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1"/>
-
-	<!-- Firebase imports -->
 	<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
 	<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
-
+	<script defer src="./scripts/db.js"></script>
 	<script defer src="./scripts/login.js"></script>
 </head>
 
