--- a/busprofile.html
+++ b/busprofile.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
     <link href="styles/bus-dating.css" rel="stylesheet" />
     <link href="styles/busprofile.css" rel="stylesheet" />
+    <script defer src="./scripts/busprofile.js"></script>
 </head>
 
 <body>
