import station.css

--- a/station.html
+++ b/station.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="dimuzone, semibran, zzzbnbzzz">
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
 	<link href="styles/bus-dating.css" rel="stylesheet" />
-	<link href="styles/busprofile.css" rel="stylesheet" />
+	<link href="styles/station.css" rel="stylesheet" />
 </head>
 
 <body>
