make buttons work again (temp fix)

--- a/chat.html
+++ b/chat.html
@@ -29,13 +29,7 @@
 			</a>
 		</div>
 	</header>
-	<main class="page -chat">
-		<div class="messages"></div>
-		<div class="message-bar">
-			<input class="message-input" placeholder="Enter a message..." />
-			<button class="message-send material-icons">arrow_upward</button>
-		</div>
-	</main>
+	<main class="page -chat"></main>
 </body>
 
 </html>
