--- a/chat.html
+++ b/chat.html
@@ -29,7 +29,15 @@
 			</a>
 		</div>
 	</header>
-	<main class="page -chat"></main>
+	<main class="page -chat">
+		<div class="messages">
+			<div class="message-groups"></div>
+		</div>
+		<div class="message-bar">
+			<input class="message-input" placeholder="Enter a message..." />
+			<button class="message-send material-icons">arrow_upward</button>
+		</div>
+	</main>
 </body>
 
 </html>
