--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html>
 
 <head>
+
 	<meta charset="utf-8">
-	<title>BusDating</title>
+	<title>BusDating -Home</title>
 	<meta name="description" content="bus dating">
 	<meta name="author" content="dimuzone, semibran, zzzbnbzzz">
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
 	<link href="styles/bus-dating.css" rel="stylesheet" />
 	<link href="styles/index.css" rel="stylesheet" />
-
+	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
+	<script defer src="./scripts/db.js"></script>
+	<script defer src="./scripts/h2.js"></script>
+	<script defer src="./scripts/index.js"></script>
 
 </head>
 
