change star icon

--- a/station.html
+++ b/station.html
@@ -21,7 +21,7 @@
         <div class="header-text">
             <div class="headings">
                 <div class="star"><span class="star-icon material-icons">
-						grade
+						star
 					</span></div>
                 <h1 class="title">Central Blvd E</h1>
                 <span class="subtitle">49W - #52500</span>
