search funtionality for search page

--- a/public/index.html
+++ b/public/index.html
@@ -23,16 +23,17 @@
 
 	<header class="header -search">
 
-			<div class="home-header">
+		<div class="home-header">
 
-				<div class="home">
-					<h1>Home</h1>
-				</div>
-
+			<div class="home">
+				<h1>Home</h1>
+			</div>
+			<a href="search.html">
 				<div class="search-bar">
 					<span class="search-icon material-icons">search</span>
 					<input class="search-input" type="text" placeholder="Search routes" name="search"><br><br>
 				</div>
+			</a>
 
 		</div>
 
@@ -55,7 +56,7 @@
 				<button class="tab -saved">
 					<span class="saved-icons material-icons">star</span>
 					<p class="saved-text">Saved</p>
-				</div>
+			</div>
 			</div>
 
 			<div class="saved-stations">
@@ -65,12 +66,12 @@
 
 					<div class="saved-route">
 						<span class="stn-route-number">Route 49E</span>
-						 &middot
+						&middot
 						<span>60195 &middot Bay 11</span>
 					</div>
 
 				</div>
-				
+
 				<div>
 					<span class="station-icon material-icons">chevron_right</span>
 				</div>
@@ -83,12 +84,12 @@
 
 					<div class="saved-route">
 						<span class="stn-route-number">Route 49W</span>
-						 &middot
+						&middot
 						<span>60358</span>
 					</div>
 
 				</div>
-				
+
 				<div>
 					<span class="station-icon material-icons">chevron_right</span>
 				</div>
