--- a/public/search.html
+++ b/public/search.html
@@ -9,6 +9,12 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
 	<link href="styles/bus-dating.css" rel="stylesheet" />
 	<link href="styles/search.css" rel="stylesheet" />
+	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
+	<script defer src="./scripts/db.js"></script>
+	<script defer src="./scripts/h2.js"></script>
+	<script defer src="./scripts/search.js"></script>
+
 </head>
 
 <body>
@@ -23,7 +29,7 @@
 		</div>
 		<div class="search-bar">
 			<span class="search-icon material-icons">search</span>
-			<input class="search-input" type="text" placeholder="Search routes" name="search">
+			<input id="search-bar" class="search-input" type="text" placeholder="Search routes" name="search">
 		</div>
 	</header>
 	<main class="page -search">
@@ -34,7 +40,13 @@
 			</div>
 			<span class="option-icon material-icons">chevron_right
 		</div>
+
+		<div id="routes">
+		</div>
+
 	</main>
+
+
 
 </body>
 
