display username in chat

--- a/public/chat.html
+++ b/public/chat.html
@@ -10,6 +10,7 @@
 	<link href="styles/bus-dating.css" rel="stylesheet" />
 	<link href="styles/chat.css" rel="stylesheet" />
 	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
 	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
 	<script defer src="./scripts/h2.js"></script>
 	<script defer src="./scripts/db.js"></script>
