Finished display recent stations

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
 			</div>
 			</div>
 
+			<div id="station">
 			<div class="saved-stations">
 				<div class="station">
 
@@ -71,7 +72,6 @@
 						&middot
 						<span>60195 &middot Bay 11</span>
 					</div>
-
 				</div>
 
 				<div>
@@ -96,7 +96,7 @@
 					<span class="station-icon material-icons">chevron_right</span>
 				</div>
 			</div>
-
+		</div>
 		</section>
 
 		<section class="recent-messages-section">
