routes page displays stations

--- a/public/route.html
+++ b/public/route.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
     <link href="styles/bus-dating.css" rel="stylesheet" />
     <link href="styles/route.css" rel="stylesheet" />
-    <script defer src="./scripts/db.js"></script>
-    <script defer src="./scripts/station.js"></script>
+    <script defer src="./scripts/h2.js"></script>
+    <script defer src="./scripts/route.js"></script>
 
 
 </head>
@@ -27,7 +27,7 @@
 					</span> UBC
                 </span>
             </div>
-            <a href="./station.html" class="back">
+            <a href="./search.html" class="back">
                 <span class="material-icons">keyboard_arrow_left</span> Search
             </a>
         </div>
@@ -40,6 +40,10 @@
     <main class="page -home">
 
         <section class="stations-section">
+
+            <div id="routes">
+
+            </div>
 
             <div class="station-wrap">
                 <div class="station">
