Add welcome message

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
         <div class="home-header">
 
             <div class="home">
-                <h1>Home</h1>
+				<h1>Home</h1>
+				<span id="welcome"></span>
                 <div class="login"><span class="login-text">Login</span></div>
 
             </div>
