--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     <script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
     <script defer src="./scripts/db.js"></script>
     <script defer src="./scripts/h2.js"></script>
-    <script defer src="./scripts/index.js"></script>
+	<script defer src="./scripts/index.js"></script>
+	<script defer src="./scripts/time.js"></script>
 
 </head>
 
@@ -100,13 +101,12 @@
 		</div>
 		</section>
 
-		<section class="recent-messages-section">
+		<div class="recent-messages">
+			RECENT MESSAGES
+		</div>
+		<section id="recentmsg" class="recent-messages-section">
 
-			<div class="recent-messages">
-				RECENT MESSAGES
-			</div>
-
-			<div class="message">
+			<!-- <div class="message">
 				<div class="msg-route">
 					<div class="msg-route-number">Route 49W (Metrotown to UBC)</div>
 					<div class="user">
@@ -130,7 +130,7 @@
 				<div class="arrow-time">
 					2h<span class="message-icon material-icons">chevron_right</span>
 				</div>
-			</div>
+			</div> -->
 
 
 		</section>
