Finished display recent message on station page.

--- a/public/station.html
+++ b/public/station.html
@@ -73,38 +73,11 @@
         </div>
 
         <div class="message-title">
-            TOP MESSAGES
+            RECENT MESSAGES
         </div>
 
         <div id="recentmsg" class="message-content">
-            <!-- <div class="message">
 
-                <div class="likes">5 <span class="material-icons">
-						thumb_up
-					</span></div>
-
-                <div class="detail">
-                    <div class="text">I have been waiting for 30 mins. Where is 49???</div>
-                    <span class="message-data"><strong>Metrotown</strong> &middot; 9m ago</span>
-                </div>
-
-                <span class="msg-icon material-icons">keyboard_arrow_right</span>
-            </div>
-
-            <div class="message">
-
-                <div class="likes">2 <span class="material-icons">
-						thumb_up
-					</span>
-                </div>
-
-                <div class="detail">
-                    <div class="text">Three people are not wearing mask in the line!!!!</div>
-                    <span class="message-data"><strong>Central Blvd E</strong> &middot; 13m ago</span>
-                </div>
-
-                <span class="msg-icon material-icons">keyboard_arrow_right</span>
-            </div> -->
         </div>
 
         <button class="button">Join chat for Route 49W</button>
