finish adding database functionality to route.js

--- a/public/route.html
+++ b/public/route.html
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
     <link href="styles/bus-dating.css" rel="stylesheet" />
     <link href="styles/route.css" rel="stylesheet" />
+    <script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
+	<script defer src="./scripts/db.js"></script>
     <script defer src="./scripts/h2.js"></script>
     <script defer src="./scripts/route.js"></script>
 
@@ -45,7 +48,7 @@
 
             </div>
 
-            <div class="station-wrap">
+            <!-- <div class="station-wrap">
                 <div class="station">
 
                     <p class="station-text">Metrotown Station</p>
@@ -76,7 +79,7 @@
                 <div>
                     <span class="station-icon material-icons">chevron_right</span>
                 </div>
-            </div>
+            </div> -->
 
         </section>
 
