--- a/public/route.html
+++ b/public/route.html
@@ -23,11 +23,9 @@
     <header class="header -search">
         <div class="header-text">
             <div class="headings">
-                <h1 class="title">Route 49W</h1>
-                <span class="subtitle"><span class="material-icons">import_export</span> Metrotown
-                <span class="east-icon material-icons">
-						east
-					</span> UBC
+                <h1 id="route" class="title"></h1>
+                <span id="swap" class="subtitle"><span class="material-icons">import_export</span> Metrotown
+                <span class="east-icon material-icons">east</span> UBC
                 </span>
             </div>
             <a href="./search.html" class="back">
@@ -36,7 +34,7 @@
         </div>
         <div class="search-bar">
             <span class="search-icon material-icons">search</span>
-            <input class="search-input" type="text" placeholder="Search routes" name="search"><br><br>
+            <input id="search-bar" class="search-input" type="text" placeholder="Search routes" name="search">
         </div>
     </header>
 
@@ -44,7 +42,7 @@
 
         <section class="stations-section">
 
-            <div id="routes">
+            <div id="stations">
 
             </div>
 
