fixed station saved. working on display user saved

--- a/public/index.html
+++ b/public/index.html
@@ -52,12 +52,12 @@
             </div>
 
             <div class="tabs">
-                <button class="tab -history">
+                <button id="userhistory" class="tab -history">
 					<span class=" history-icons material-icons">schedule</span>
 					<p class="history-text">History</p>
 				</button>
 
-                <button class="tab -saved">
+                <button id="usersaved" class="tab -saved">
 					<span class="saved-icons material-icons">star</span>
 					<p class="saved-text">Saved</p>
 			</div>
