--- a/public/chat.html
+++ b/public/chat.html
@@ -6,7 +6,7 @@
 	<title>BusDating - Chat</title>
 	<meta name="description" content="bus dating">
 	<meta name="author" content="dimuzone, semibran, zzzbnbzzz">
-	<meta name="viewport" content="width=device-width,initial-scale=1" />
+	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
 	<link href="styles/bus-dating.css" rel="stylesheet" />
 	<link href="styles/chat.css" rel="stylesheet" />
 	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
