staation page changes to what station you are on

--- a/public/station.html
+++ b/public/station.html
@@ -26,27 +26,26 @@
                 <div class="star">
                     <span id="star" class="star-icon material-icons">star_border</span>
                 </div>
-                <h1 class="title">Central Blvd E</h1>
-                <span class="subtitle">49W - #52500</span>
+                <h1 id="name" class="title"></h1>
+                <span id="routeAndId" class="subtitle"></span>
             </div>
             <a href="./station.html" class="back">
-                <span class="material-icons">keyboard_arrow_left</span> 49W
-            </a>
+                <span class="material-icons">keyboard_arrow_left</span> <span id="routeId"></span>            </a>
         </div>
     </header>
 
     <main class="page">
         <div class="route">
-            <div class="this-station">CENTRAL BLVD E</div>
+            <div id="currentName" class="this-station">CENTRAL BLVD E</div>
             <div class="station-table">
                 <div class="station"></div>
                 <div class="station -select"></div>
                 <div class="station"></div>
             </div>
-            <div class="before">
+            <div id="before" class="before">
                 METROTOWN
             </div>
-            <div class="after">
+            <div id="after" class="after">
                 WAVERLEY AVE
             </div>
         </div>
@@ -80,7 +79,7 @@
 
         </div>
 
-        <button class="button">Join chat for Route 49W</button>
+        <button id="root" class="button"></button>
     </main>
 
 </body>
