--- a/public/route.html
+++ b/public/route.html
@@ -24,8 +24,9 @@
         <div class="header-text">
             <div class="headings">
                 <h1 id="route" class="title"></h1>
-                <span id="swap" class="subtitle"><span class="material-icons">import_export</span> Metrotown
-                <span class="east-icon material-icons">east</span> UBC
+                <span id="swap" class="subtitle">
+                    <span class="material-icons">import_export</span><span id="starting"></span>
+                    <span class="east-icon material-icons">east</span><span id="ending"></span>
                 </span>
             </div>
             <a href="./search.html" class="back">
@@ -45,7 +46,7 @@
             <div id="stations">
 
             </div>
-            
+
         </section>
 
 
