Linked index to search to route to station

--- a/public/index.html
+++ b/public/index.html
@@ -32,11 +32,12 @@
                 <div class="login"><span class="login-text">Login</span></div>
 
             </div>
-
+			<a href="./search.html">
             <div class="search-bar">
                 <span class="search-icon material-icons">search</span>
                 <input class="search-input" type="text" placeholder="Search routes" name="search"><br><br>
-            </div>
+			</div>
+		</a>
 
 
         </div>
