--- a/public/search.html
+++ b/public/search.html
@@ -23,8 +23,8 @@
 			<div class="headings">
 				<h1 class="title">Search</h1>
 			</div>
-			<a href="./home.html" class="back">
-				<span class="material-icons">keyboard_arrow_left</span> Metrotown
+			<a href="./index.html" class="back">
+				<span class="material-icons">keyboard_arrow_left</span> Home
 			</a>
 		</div>
 		<div class="search-bar">
