--- a/public/station.html
+++ b/public/station.html
@@ -29,7 +29,7 @@
                 <h1 id="name" class="title"></h1>
                 <span id="routeAndId" class="subtitle"></span>
             </div>
-            <a href="./station.html" class="back">
+            <a href="./route.html" class="back">
                 <span class="material-icons">keyboard_arrow_left</span> <span id="routeId"></span>            </a>
         </div>
     </header>
