--- a/public/station.html
+++ b/public/station.html
@@ -29,8 +29,9 @@
                 <h1 id="name" class="title"></h1>
                 <span id="routeAndId" class="subtitle"></span>
             </div>
-            <a href="./station.html" class="back">
-                <span class="material-icons">keyboard_arrow_left</span> <span id="routeId"></span>            </a>
+            <a href="./route.html" class="back">
+                <span class="material-icons">keyboard_arrow_left</span> <span id="routeId"></span>            
+            </a>
         </div>
     </header>
 
@@ -79,7 +80,9 @@
 
         </div>
 
-        <button id="root" class="button"></button>
+        <a href="./chat.html"><button id="root" class="button"></button></a>
+
+
     </main>
 
 </body>
