--- a/public/chat.html
+++ b/public/chat.html
@@ -22,11 +22,11 @@
 		<div class="header-text">
 			<div class="headings">
 				<h1 class="title">Chat</h1>
-				<span class="subtitle">49W - #52500</span>
+				<span id="subtitle" class="subtitle">station - #route</span>
 			</div>
 			<a href="./station.html" class="back">
 				<span class="material-icons">keyboard_arrow_left</span>
-				Metrotown
+				<span id="back">Station</span>
 			</a>
 		</div>
 	</header>
