--- a/public/station.html
+++ b/public/station.html
@@ -79,7 +79,7 @@
 
         </div>
 
-        <button id="root" class="button"></button>
+        <button id="join" class="button"></button>
     </main>
 
 </body>
