--- a/public/route.html
+++ b/public/route.html
@@ -1,25 +1,23 @@
 <!doctype html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <title>BusDating</title>
+
     <meta name="description" content="bus dating">
     <meta name="author" content="dimuzone, semibran, zzzbnbzzz">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
+
     <link href="styles/bus-dating.css" rel="stylesheet" />
     <link href="styles/route.css" rel="stylesheet" />
+
     <script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
 	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
 	<script defer src="./scripts/db.js"></script>
     <script defer src="./scripts/h2.js"></script>
     <script defer src="./scripts/route.js"></script>
-
-
 </head>
-
 <body>
-
     <header class="header -search">
         <div class="header-text">
             <div class="headings">
@@ -40,18 +38,9 @@
     </header>
 
     <main class="page -home">
-
         <section class="stations-section">
-
-            <div id="stations">
-
-            </div>
-
+            <div id="stations"></div>
         </section>
-
-
     </main>
-
 </body>
-
 </html>
