--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
 	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
 	<script defer src="./scripts/db.js"></script>
 	<script defer src="./scripts/h2.js"></script>
+	<script defer src="./scripts/timediff.js"></script>
 	<script defer src="./scripts/index.js"></script>
-	<script defer src="./scripts/time.js"></script>
 </head>
 
 <body>
