make href in chat.html blank

--- a/public/chat.html
+++ b/public/chat.html
@@ -26,7 +26,7 @@
 				<h1 class="title">Chat</h1>
 				<span id="subtitle" class="subtitle">station - #route</span>
 			</div>
-			<a href="./station.html" class="back">
+			<a href="#" id="chatBack" class="back">
 				<span class="material-icons">keyboard_arrow_left</span>
 				<span id="back">Station</span>
 			</a>
