--- a/public/station.html
+++ b/public/station.html
@@ -18,8 +18,8 @@
     <script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
     <script defer src="./scripts/h2.js"></script>
     <script defer src="./scripts/db.js"></script>
+    <script defer src="./scripts/timediff.js"></script>
     <script defer src="./scripts/station.js"></script>
-    <script defer src="./scripts/time.js"></script>
 </head>
 
 <body>
