index->search: search bar autofocus

--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,9 @@
 		</div>
 		<a href="./search.html" class="search-bar">
 			<span class="search-icon material-icons">search</span>
-			<input class="search-input" type="text" placeholder="Search routes" name="search"><br><br>
+			Search routes
 		</a>
 	</header>
-
 	<main class="page -home"></main>
 </body>
 
