--- a/public/search.html
+++ b/public/search.html
@@ -31,7 +31,11 @@
 		</div>
 		<div class="search-bar">
 			<span class="search-icon material-icons">search</span>
-			<input id="search-bar" class="search-input" type="text" placeholder="Search routes" name="search">
+			<input id="search-bar" class="search-input"
+				type="text"
+				placeholder="Search routes"
+				name="search"
+				autofocus/>
 		</div>
 	</header>
 	<main class="page -search">
