--- a/public/station.html
+++ b/public/station.html
@@ -32,9 +32,9 @@
                 <h1 id="name" class="title"></h1>
                 <span id="routeAndId" class="subtitle"></span>
             </div>
-            <a href="./route.html" class="back">
+            <div class="back">
                 <span class="material-icons">keyboard_arrow_left</span> <span id="routeId"></span>
-            </a>
+            </div>
         </div>
     </header>
     <main class="page">
