changed to .back rather than href

--- a/public/chat.html
+++ b/public/chat.html
@@ -26,10 +26,10 @@
 				<h1 class="title">Chat</h1>
 				<span id="subtitle" class="subtitle">station - #route</span>
 			</div>
-			<a href="#" id="chatBack" class="back">
+			<div id="chatBack" class="back" onclick="window.history.back()">
 				<span class="material-icons">keyboard_arrow_left</span>
 				<span id="back">Station</span>
-			</a>
+			</div>
 		</div>
 	</header>
 	<main class="page -chat">
