--- a/public/route.html
+++ b/public/route.html
@@ -15,6 +15,7 @@
 	<script defer src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
 	<script defer src="./scripts/db.js"></script>
     <script defer src="./scripts/h2.js"></script>
+    <script defer src="./scripts/normstn.js"></script>
     <script defer src="./scripts/route.js"></script>
 </head>
 <body>
