Linked report.html and station.html

--- a/public/report.html
+++ b/public/report.html
@@ -22,7 +22,7 @@
 		<div class="header-text">
 			<div class="headings">
 				<h1 class="title">Update</h1>
-				<span class="subtitle">49W - #52500</span>
+				<span id='name' class="subtitle">49W - #52500</span>
 			</div>
 			<a href="./station.html" class="back">
 				<span class="material-icons">keyboard_arrow_left</span> Metrotown
