station: minor styling tweaks

--- a/public/station.html
+++ b/public/station.html
@@ -46,11 +46,9 @@
                 <div class="station -current -select"></div>
                 <div class="station -after"></div>
             </div>
-            <div id="before" class="before">
-                METROTOWN
-            </div>
-            <div id="after" class="after">
-                WAVERLEY AVE
+            <div class="stations-below">
+                <div id="before" class="before">METROTOWN</div>
+                <div id="after" class="after">WAVERLEY AVE</div>
             </div>
         </div>
         <div class="info-title">
