--- a/public/report.html
+++ b/public/report.html
@@ -24,9 +24,9 @@
 				<h1 class="title">Update</h1>
 				<span id='name' class="subtitle">49W - #52500</span>
 			</div>
-			<a href="./station.html" class="back">
+			<button id="back" class="back">
 				<span class="material-icons">keyboard_arrow_left</span> Metrotown
-			</a>
+			</button>
 		</div>
 	</header>
 	<main class="page -update">
